
               Previously this would result in a "no such package"
               error.

  * New aliases for some command-line options:
    --yes, for --assume-yes (apt-get)
    --default-release, for --target-release (apt-utils)
    --install-on-startup, for -i
    --update-on-startup, for -u

  * New configuration item:
    Aptitude::CmdLine::Sorting, equivalent to --sort

- Minor bugs:

  * handle "-qq" like other apt-utils
  * properly process all -o command line options (Closes: #587671)
  * unknown command line options trigger an error (Closes: #434502)
  * --add-user-tag-to, --remove-user-tag-from are working;
    no bug reports suggests that noone has noticed they
    were broken, but they work now anyway

  * [cmdline]: Virtual packages which have an already
               installed provider are only skipped when the
               requested action is to install them.

  * [cmdline]: search exit with status 1 if it found no
               matches (Closes: #497299)

  * [cmdline]: why exits with status 1 if it found no
               reasons given the particular arguments

- Internal changes:

  * Unified the way packages are selected from command line
    arguments.

  * Use apt's CommandLine parser

    Previously aptitude was using it's own command line
    parser implemented on top of getopt.  Replacing this
    with the standard apt class means there are no longer
    subtle quirks with our parser (such as "-qq" not
    being valid when it is fine for other apt programs).

  * download_install_manager.cc:
    - repeat if package manager result is DoAgain;
    - report all download errors not just the first;

- Cosmetic and UI bugs:

  * [cmdline]: Use arch-qualified names for virtual packages in
               more places as this is what apt-utils do.

  * [cmdline]: Most errors are now displayed at the end of a command's
               output which makes them easier to spot when there is
               lots of output. (Closes: #430392)
